# image-semantic-analysis-microservice

./: README.md
docker/: docker-compose.yaml
docker/data/.minio.sys/: format.json
docker/data/.minio.sys/buckets/: .usage.json
docker/data/.minio.sys/buckets/.minio.sys/buckets/.usage-cache.bin/: fs.json
docker/data/.minio.sys/buckets/image/rainn-wilson-the-office2.jpg/: fs.json
emotion-detection-service/: main.py  pyproject.toml
emotion-detection-service/jupyter/: test.ipynb
emotion-detection-service/jupyter/.ipynb_checkpoints/: test-checkpoint.ipynb  train-checkpoint.ipynb
emotion-detection-service/src/app/emotion_detection/api/: __init__.py  application.py
emotion-detection-service/src/app/emotion_detection/api/router/: image.py
emotion-detection-service/src/app/emotion_detection/kafka/: __init__.py  consumer.py  producer.py
emotion-detection-service/src/app/emotion_detection/model/: emotion_model.json
emotion-detection-service/src/app/emotion_detection/services/: emotion.py
notification-service/: go.mod  go.sum
notification-service/cmd/: main.go
notification-service/config/: env.go
notification-service/service/: kafkaConsumer.go  notification.go
notification-service/types/: types.go
notification-service/utils/: util.go
upload-service/: go.mod  go.sum
upload-service/cmd/: main.go
upload-service/cmd/api/: api.go
upload-service/db/: fileStorage.go
upload-service/service/images/: router.go  service.go
upload-service/service/kafkaProducer/: service.go
upload-service/types/: types.go
(+4 files in other folders)
