[tool.poetry]
name = "emotion-detection-service"
version = "0.1.0"
description = ""
authors = ["Furkan Melih Ercan <furkanmelihercan.98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
