[tool.poetry]
name = "emotion-detection-service"
version = "0.1.0"
description = ""
authors = ["Furkan Melih Ercan <furkanmelihercan.98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"
jupyter = "^1.1.1"
jupyterlab = "^4.2.5"
tensorflow = "^2.17.0"
pillow = "^10.4.0"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
fastapi = "^0.115.0"
pydantic = "^2.9.2"
uvicorn = "^0.31.0"
black = "^24.8.0"
keras = "^3.6.0"
pykafka = "^2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
